<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.CadastroClienteDadosBasicosFragment">

    <!-- Campo nome do cliente -->
    <EditText
        android:id="@+id/edt_nome_completo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/edt_cadastro_cliente_nome_completo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        android:inputType="text"
        android:autofillHints="name" />

    <!-- Feedback campo nome completo -->
    <TextView
        android:id="@+id/txt_feedback_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/edt_nome_completo"
        app:layout_constraintTop_toBottomOf="@id/edt_nome_completo"
        android:layout_marginTop="5dp" />

    <!-- Campo cpf do cliente -->
    <EditText
        android:id="@+id/edt_cpf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/edt_cadastro_cliente_cpf"
        app:layout_constraintStart_toStartOf="@id/edt_nome_completo"
        app:layout_constraintEnd_toEndOf="@id/edt_nome_completo"
        app:layout_constraintTop_toBottomOf="@id/txt_feedback_nome"
        android:inputType="number"
        android:layout_marginTop="10dp" />

    <!-- Feedback campo cpf -->
    <TextView
        android:id="@+id/txt_feedback_cpf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/edt_cpf"
        app:layout_constraintTop_toBottomOf="@id/edt_cpf"
        android:layout_marginTop="5dp" />

    <!-- Campo rg do cliente -->
    <EditText
        android:id="@+id/edt_rg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/edt_cadastro_cliente_rg"
        app:layout_constraintStart_toStartOf="@id/edt_cpf"
        app:layout_constraintEnd_toEndOf="@id/edt_cpf"
        app:layout_constraintTop_toBottomOf="@id/txt_feedback_cpf"
        android:inputType="number"
        android:layout_marginTop="10dp" />

    <!-- Feedback campo rg -->
    <TextView
        android:id="@+id/txt_feedback_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/edt_rg"
        app:layout_constraintTop_toBottomOf="@id/edt_rg"
        android:layout_marginTop="5dp" />

    <!-- Campo data de nascimento do cliente -->
    <EditText
        android:id="@+id/edt_data_nascimento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/edt_cadastro_cliente_data_nascimento"
        app:layout_constraintStart_toStartOf="@id/edt_rg"
        app:layout_constraintEnd_toEndOf="@id/edt_rg"
        app:layout_constraintTop_toBottomOf="@id/txt_feedback_rg"
        android:inputType="date"
        android:layout_marginTop="10dp" />

    <!-- Feedback campo de data de nascimento -->
    <TextView
        android:id="@+id/txt_feedback_data_nascimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/edt_data_nascimento"
        app:layout_constraintTop_toBottomOf="@id/edt_data_nascimento"
        android:layout_marginTop="5dp" />

    <!-- Spinner para o usuário selecionar o sexo do cliente -->
    <Spinner
        android:id="@+id/spn_sexo_cliente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:elevation="2dp"
        android:background="@drawable/spinner_estilo"
        app:layout_constraintStart_toStartOf="@id/edt_data_nascimento"
        app:layout_constraintEnd_toEndOf="@id/edt_data_nascimento"
        app:layout_constraintTop_toBottomOf="@id/txt_feedback_data_nascimento" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_retornar"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_retornar"
        android:background="@drawable/botao_azul_padrao"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_prosseguir"
        android:drawableStart="@drawable/ic_retornar"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:layout_marginBottom="20dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_prosseguir"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_prosseguir"
        android:background="@drawable/botao_azul_padrao"
        android:textColor="@color/white"
        android:drawableEnd="@drawable/ic_prosseguir"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        app:layout_constraintStart_toEndOf="@id/btn_retornar"
        app:layout_constraintBottom_toBottomOf="@id/btn_retornar"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>