<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:src="@drawable/logo_padrao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_layout_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_logo"
        android:layout_margin="20dp" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:inputType="textEmailAddress"
            android:hint="@string/edt_email_login"
            android:textStyle="bold"
            android:textColor="@color/cor_primaria" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_feedback_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/txt_input_layout_email"
        app:layout_constraintTop_toBottomOf="@id/txt_input_layout_email"
        android:layout_marginTop="5dp"
        android:visibility="gone" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_layout_senha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/txt_input_layout_email"
        app:layout_constraintEnd_toEndOf="@id/txt_input_layout_email"
        app:layout_constraintTop_toBottomOf="@id/txt_feedback_email"
        android:layout_marginTop="10dp" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:inputType="textPassword"
            android:hint="@string/edt_senha_login"
            android:textStyle="bold"
            android:textColor="@color/cor_primaria" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_feedback_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/txt_input_layout_senha"
        app:layout_constraintTop_toBottomOf="@id/txt_input_layout_senha"
        android:layout_marginTop="5dp"
        android:visibility="gone" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_login"
        android:text="@string/txt_btn_login"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/txt_input_layout_senha"
        app:layout_constraintEnd_toEndOf="@id/txt_input_layout_senha"
        app:layout_constraintTop_toBottomOf="@id/txt_feedback_senha"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:drawableEnd="@drawable/ic_entrar"
        android:paddingEnd="15dp"
        android:textAlignment="center"
        android:paddingStart="15dp" />

</androidx.constraintlayout.widget.ConstraintLayout>